--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ I consistantly look forward to expand my knowledge in emerging technologies like
 								</p>
 
                                                                  <p>
-To get a better insight on my Academic life so far, you can have a look at my <a href='https://drive.google.com/file/d/1CsJk699FmkcM5w8Hr3OXwNPtIDbp-DDF/view?usp=sharings'>Resume</a>. 
+To get a better insight on my Academic life so far, you can have a look at my <a href='https://drive.google.com/file/d/1o-wbAnfZ36gs_D_vYUir34gXh2zgtfdc/view?usp=sharing'>Resume</a>. 
 								</p>
 
                                                                 <p>
