--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 								
 								
 								<p>
-Hi, I'm Yellareddy Varshanth Reddy. I currently am pursuing my B.Tech in Electrical and Electronics Engineering at National Institute of Technology, Puducherry (NIT-PY). I am an innnovation and research enthusiast. I possess good technical and management skills with intermediate coding knowledge.
+Hi, I'm Yellareddy Varshanth Reddy. I had pursued my B.Tech in Electrical and Electronics Engineering at National Institute of Technology, Puducherry (NIT-PY). I am an innnovation and research enthusiast. I possess good technical and management skills with intermediate coding knowledge.
 I consistantly look forward to expand my knowledge in emerging technologies like Smart Automation systems and Machine Learning. 
 								</p>
 
